# nimbus

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  types.rs
lib/src/providers/: digitalocean.rs  hetzner.rs  linode.rs  mod.rs  ovh.rs  scaleway.rs  vultr.rs
lib/tests/: mock_providers.rs  mock_providers_unhappy.rs
mock/: Cargo.toml
mock/src/: digitalocean.rs  hetzner.rs  lib.rs  linode.rs  main.rs  ovh.rs  scaleway.rs  vultr.rs
