[package]
name = "nimbus-mock"
description = "In-memory mock servers for Hetzner, Vultr, and OVH — LocalStack-style, for testing nimbus-cloud offline."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nimbus-mock"
path = "src/main.rs"

[lib]
name = "nimbus_mock"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
nimbus-cloud = { path = "../lib" }
reqwest = { workspace = true }
